# PicoBoard-Games

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh.md  ReadmeCN.txt
lib/Config/: BoardPins.h  DEV_Config.h
lib/LCD/: CMakeLists.txt  LCD_1in3.c
src/app/: app_main.c
src/core/: CMakeLists.txt  input.c  input.h  render.c  render.h
src/drivers/: CMakeLists.txt
src/drivers/hw/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
src/drivers/lcd/: CMakeLists.txt  LCD_1in3.c  LCD_1in3.h
src/game/: CMakeLists.txt  chess_ai.c  chess_ai.h  chess_ai_easy.c  chess_ai_medium.c  chess_check.c  chess_check.h  chess_eval.c  chess_eval.h  chess_legal.c  chess_legal.h  chess_move.c  chess_move.h  chess_pieces_small.h  chess_pseudo.c  chess_pseudo.h  chess_result.c  chess_result.h  chess_state.c  chess_state.h  chess_types.c  chess_types.h  gomoku_game.c  gomoku_game.h  tictactoe_game.c  tictactoe_game.h
src/ui/: CMakeLists.txt  chess_ui.c  chess_ui.h  gomoku_ui.c  gomoku_ui.h  menu_ui.c  menu_ui.h  tictactoe_ui.c  tictactoe_ui.h
tools/chess_piece_scale/: scale_pieces.py
